--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 									<li><b>Date Of Birth:</b> 21 Jan 2001</li>
 									<li><b>Phone:</b> 8795131516</li>
 									<li><b>Email:</b> abdulkalam2201@gmail.com</li>
-									<li><b>Address:</b> Sheikhpurwa Mankapur-271302 India..</li>
+									<li><b>Address:</b> Mankapur Gonda-271302 India..</li>
 								</ul> <!-- end .list-unstyled -->
 								<div class="spacer"></div>
 								<h3>What I'm Doing</h3>
