--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<span>Software Engineer</span>
 				</div> <!-- end .content -->
 				<div class="text-right">
-					<a href="abdul's resume.pdf" Target="_blank" class="button link-button white icon-left"><i class="fas fa-download"></i>Download Resume</a>
+					<a href="/images/abdul's resume.pdf" Target="_blank" class="button link-button white icon-left"><i class="fas fa-download"></i>Download Resume</a>
 				</div> <!-- end .text-right -->
 			</header> <!-- end .slide-out-header -->
 			<div class="slide-out-widgets">
