--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<span>Software Engineer</span>
 				</div> <!-- end .content -->
 				<div class="text-right">
-					<a href="/images/abdul's resume.pdf" Target="_blank" class="button link-button white icon-left"><i class="fas fa-download"></i>Download Resume</a>
+					<a href="/images/Abdul's Resume.pdf" Target="_blank" class="button link-button white icon-left"><i class="fas fa-download"></i>Download Resume</a>
 				</div> <!-- end .text-right -->
 			</header> <!-- end .slide-out-header -->
 			<div class="slide-out-widgets">
@@ -180,7 +180,7 @@
 							<div class="col-sm-7 vertical-center padding-fix">
 								<h1>Abdul Kalam</h1>
 								<p>Hello!! I am Abdul, a Software Engineer & Cloud Computing Enthusiast.</p>
-								<p class="button-row"><a href="#section8" class="button solid-button white">Hire Me Now</a><a href="images/abdul's Resume.pdf" target="_blank" class="button solid-button purple">Download CV</a></p>
+								<p class="button-row"><a href="#section8" class="button solid-button white">Hire Me Now</a><a href="images/Abdul's Resume.pdf" target="_blank" class="button solid-button purple">Download CV</a></p>
 							</div> <!-- end .col-sm-7 -->
 							<div class="col-sm-5 vertical-center">
 								<img src="images\boss.jpg" alt="frontImage" class="img-responsive section-img">
