--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 							<div class="col-sm-7 vertical-center padding-fix">
 								<h1>Abdul Kalam</h1>
 								<p>Hello!! I am Abdul, a Software Engineer & Cloud Computing Enthusiast.</p>
-								<p class="button-row"><a href="#section8" class="button solid-button white">Hire Me Now</a><a href="images/Abdul's Resume.pdf" target="_blank" class="button solid-button purple">Download CV</a></p>
+								<p class="button-row"><a href="#section8" class="button solid-button white">Hire Me Now</a><a href="images/abdul's resume.pdf" target="_blank" class="button solid-button purple">Download CV</a></p>
 							</div> <!-- end .col-sm-7 -->
 							<div class="col-sm-5 vertical-center">
 								<img src="images\boss.jpg" alt="frontImage" class="img-responsive section-img">
